Edit the video views to take in start and end as well

--- a/app/views/videos/_form.html.slim
+++ b/app/views/videos/_form.html.slim
@@ -9,4 +9,10 @@
   .field
     = f.label :link
     = f.text_field :link
+  .field
+    = f.label :start
+    = f.number_field :start
+  .field
+    = f.label :end
+    = f.number_field :end
   .actions = f.submit
