--- a/app/views/videos/index.html.slim
+++ b/app/views/videos/index.html.slim
@@ -4,6 +4,8 @@ table
   thead
     tr
       th Link
+      th Start
+      th End
       th
       th
       th
@@ -12,6 +14,8 @@ table
     - @videos.each do |video|
       tr
         td = video.link
+        td = video.start
+        td = video.end
         td = link_to 'Show', video
         td = link_to 'Edit', edit_video_path(video)
         td = link_to 'Destroy', video, data: { confirm: 'Are you sure?' }, method: :delete
