--- a/app/views/videos/_form.html.slim
+++ b/app/views/videos/_form.html.slim
@@ -7,8 +7,8 @@
           li = message
 
   .field
-    = f.label :link
-    = f.text_field :link
+    = f.label :youtube_id
+    = f.text_field :youtube_id
   .field
     = f.label :start
     = f.number_field :start
