--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,8 @@
 <html>
   <head>
     <title>LindyRepo</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
@@ -9,6 +11,7 @@
   </head>
 
   <body>
+    <%= render 'layouts/navbar' %>
     <p class='notice'><%= notice %></p>
     <p class='alert'><%= alert %></p>
     <%= yield %>
