--- a/app/views/layouts/_navbar.html.slim
+++ b/app/views/layouts/_navbar.html.slim
@@ -2,5 +2,9 @@
   h5.my-0.mr-md-auto.font-weight-normal Company name
   nav.my-2.my-md-0.mr-md-3
     a.p-2.text-dark href='#' Foo
-  = link_to 'Sign up', new_user_registration_path,
-      class: "btn btn-outline-primary"
+  - if current_user
+    = link_to 'Sign out', destroy_user_session_path,
+        class: "btn btn-outline-primary", method: :delete
+  - else
+    = link_to 'Sign up', new_user_registration_path,
+        class: "btn btn-outline-primary"
