--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -1,2 +1,17 @@
-h1 Welcome#index
-p Find me in app/views/welcome/index.html.slim
+.jumbotron
+  .container
+    h1.display-3 Hello, world!
+    p This is a template.
+    p
+      a.btn.btn-primary.btn-lg href='#' Learn more
+.container
+  .row
+    .col-md-4
+      h2 Heading
+      p Foo bar baz
+    .col-md-4
+      h2 Heading
+      p Foo bar baz
+    .col-md-4
+      h2 Heading
+      p Foo bar baz
