--- a/app/views/layouts/_navbar.html.slim
+++ b/app/views/layouts/_navbar.html.slim
@@ -1,7 +1,8 @@
 .d-flex.flex-column.flex-md-row.align-items-center.p-3.px-md-4.mb-3.bg-white.border-bottom.box-shadow
   h5.my-0.mr-md-auto.font-weight-normal Company name
   nav.my-2.my-md-0.mr-md-3
-    a.p-2.text-dark href='#' Foo
+    = link_to 'Videos', videos_path,
+        class: 'p-2 text-dark'
   - if current_user
     = link_to 'Sign out', destroy_user_session_path,
         class: "btn btn-outline-primary", method: :delete
