--- a/app/views/videos/new.html.slim
+++ b/app/views/videos/new.html.slim
@@ -1,5 +1,4 @@
-h1 New video
-
-== render 'form'
-
-= link_to 'Back', videos_path
+.container.text-center
+  h1 New video
+  == render 'form'
+  = link_to 'Back', videos_path
