--- a/app/views/videos/show.html.slim
+++ b/app/views/videos/show.html.slim
@@ -1,23 +1,13 @@
 p#notice = notice
 
-p
-  strong YouTube ID:
-  = @video.youtube_id
+.container
+  .embed-responsive.embed-responsive-16by9
+      #player.embed-responsive-item
 
-p
-  strong Start:
-  = @video.start
+      => link_to 'Edit', edit_video_path(@video)
+      '|
+      =< link_to 'Back', videos_path
 
-p
-  strong End:
-  = @video.end
-
-#player
-
-=> link_to 'Edit', edit_video_path(@video)
-'|
-=< link_to 'Back', videos_path
-
-javascript:
-  var youtube = new App.YouTube('player',#{raw @video.to_json});
-  youtube.render();
+      javascript:
+        var youtube = new App.YouTube('player',#{raw @video.to_json});
+        youtube.render();
