Have top left link to home page

--- a/app/views/layouts/_navbar.html.slim
+++ b/app/views/layouts/_navbar.html.slim
@@ -1,5 +1,5 @@
 .d-flex.flex-column.flex-md-row.align-items-center.p-3.px-md-4.mb-3.bg-white.border-bottom.box-shadow
-  h5.my-0.mr-md-auto.font-weight-normal Company name
+  h5.my-0.mr-md-auto.font-weight-normal = link_to 'Company name', root_path
   nav.my-2.my-md-0.mr-md-3
     = link_to 'Videos', videos_path, class: 'p-2 text-dark'
     = link_to 'About', about_path, class: 'p-2 text-dark'
